--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ input[type="search"].sb-search-input {
 
 /*List styles*/
 #myInput {
-    background-image: url('/images/searchicon.png');
+    /*background-image: url('/images/searchicon.png');*/
     background-position: 10px 12px; 
     background-repeat: no-repeat; 
     width: 100%; 
