--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,14 @@ i {
     h1 {
         font-size: 4em;
     }
+    
+    h2 {
+        font-size: 2.5em;
+    }
+    
+    h3 {
+        font-size: 2em;
+    }
 
     .sub-tag {
         font-size: 1.5em;
