--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-body { 
+body {
     background-color: #f1f5f8;
     font-family: 'Montserrat', sans-serif;
 }
-.fa { 
+.fa {
     font-family: 'FontAwesome' !important;
 }
 .masthead {
@@ -15,14 +15,13 @@ body {
     padding-top: 8rem;
     padding-bottom: 8rem;
     background-repeat: repeat;
-    background-image: url("../images/pattern.png");
 }
-.masthead h1 { 
+.masthead h1 {
     font-weight: 600;
     font-size: 4em;
     color: #0c0a3e;
 }
-.masthead .row { 
+.masthead .row {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +45,7 @@ h2 {
     border-radius: 50%;
     width: 300px;
 }
-p { 
+p {
     font-size: 16px;
 }
 .section {
@@ -64,7 +63,7 @@ p {
     color: #00d9ff;
     font-weight: 600;
 }
-a:hover { 
+a:hover {
     text-decoration: none;
 }
 .outer-container img {
@@ -73,9 +72,9 @@ a:hover {
 .outer-container img:hover {
     opacity: 0.8;
 }
+#youfoodz,
 #gamify,
-#weploy,
-#netball-queensland { 
+#bigstone {
     background-color: #fff!important;
 }
 @media (max-width: 767px) {
@@ -83,7 +82,7 @@ a:hover {
         padding-top: 3rem;
         padding-bottom: 3rem;
     }
-    .masthead .col-lg-5, .masthead .col-lg-7 { 
+    .masthead .col-lg-5, .masthead .col-lg-7 {
         text-align: center;
     }
     .masthead h1 {
